adds backend connection and words highlighting

--- a/frontend/src/app.module.scss
+++ b/frontend/src/app.module.scss
@@ -70,3 +70,12 @@ $btn-shadow: 2px 2px 8px 0px rgba(34, 60, 80, 0.2);
         cursor: pointer;
     }
 }
+
+.highlight {
+    background-color: yellow;
+}
+
+.press {
+    font-weight: 700;
+    margin-bottom: 1rem;
+}
